--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -349,9 +349,9 @@ template {
 }
 
 
-.header-title {
-	font-size: 1.5rem;
-	letter-spacing: 0.2em;
+:root {
+  font-size: 1em;
+  /*font-size: calc(1.5em + 0.5vw);*/
 }
 
 body {
@@ -360,7 +360,6 @@ body {
 	font-family: "Alegreya Sans", sans-serif;
 	font-weight: 400;
 	font-style: normal;
-	font-size: 18px;
 }
 
 h1, h2, h3, h4 {
@@ -371,23 +370,29 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-	font-size: 4rem;
+	font-size: 4em;
 	line-height: 1.2;
-	margin-bottom: 0.5rem;
+	margin-bottom: 0.5em;
 }
 
 h2 {
-	font-size: 2rem;
+	font-size: 2em;
 	line-height: 1.2;
-	margin-bottom: 0.5rem;
-}
-header {
-	text-align: center;
+	margin-bottom: 0.5em;
 }
 
  a {
 	color: #292622;
 }
+header {
+	text-align: center;
+}
+
+.header-title {
+  font-size: 1.5em;
+	letter-spacing: 0.2em;
+}
+
 header.fixed {
     position: fixed;
     top: 0;
@@ -400,23 +405,25 @@ header.fixed {
     padding: 7em 5em 2.75em;
 }
 
-form {
-	background-color: #DDCEB7;
-	margin: 1em auto 2.5em;
-    padding: 1.05em 1.15em;
-    border-radius: 35px;
-	box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.35);
-	text-align: left;
-	max-width: 24em;
-}
 
 main.moving {
 	position: absolute;
-    top: 40vh;
-    left: 0;
-    right: 0;
-    z-index: 2;
+  top: 40vh;
+  left: 0;
+  right: 0;
+  z-index: 2;
 }
+
+form {
+	background-color: #DDCEB7;
+	margin: 1em auto 2.5em;
+  padding: 1.05em 1.15em;
+  border-radius: 35px;
+	box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.35);
+	text-align: left;
+  max-width: 24em;
+}
+
 .field {
  	display: grid;
 	grid-template-columns: max-content 1 fr;
@@ -425,21 +432,24 @@ main.moving {
 }
 
 label {
-	font-size: 1.3rem;
-	 margin-bottom: 0.2rem;
+	font-size: 1.3em;
+	 margin-bottom: 0.2em;
 }
+
 input, select {
-	padding: .5rem;
+	padding: .5em;
 	background-color: #FAF1E3;
 	box-shadow: none;
 	border: 1px solid #4E4841;
 	border-radius: 5px;
 }
 p.button {
-	margin-top: 3rem;
-	margin-bottom: 3rem;
+	margin-top: 3em;
+	margin-bottom: 3em;
 	text-align: center;
 }
+
+
 button {
 	border: 1px solid transparent;
 	border-radius: 5px;
@@ -452,4 +462,23 @@ button {
 
 #privacidade {
 	margin-right: 0.2em;
+}
+
+@media screen and (max-width: 700px) {
+  form {
+    max-width: 20em;
+  }
+  h1 {
+    font-size: 3.5em;
+  }
+  h2 {
+    font-size: 1.7em;
+  }
+  label {
+    font-size: 1.2em;
+  }
+
+  header.fixed {
+    padding: 4em 3em 2.75em;
+  }
 }
